--- a/assessment-front-end-web/home.html
+++ b/assessment-front-end-web/home.html
@@ -11,6 +11,7 @@
 	        <li class="crumb"><a href="./home.html">Home</a></li>
 	        <li class="crumb"><a href="./profile.html">Profile</a></li>
 	        <li class="crumb"><a href="./about.html">About</a></li>
+			<li class="crumb"><a href="./neighborhood.html">Neighborhood</a></li>
 	    </ol>
 	</nav>
 
@@ -46,13 +47,14 @@
 
 		</form>
 		
+		<section>
+			<p>
+				Hello, and welcome to our website. We are so glad you have decided to pay us a visit. We hope that you find all that you are looking for while visiting our site.
+			</p>
+		</section>
+		
 	</content>
 	
-	<section>
-		<p>
-			Hello, and welcome to our website. We are so glad you have decided to pay us a visit. We hope that you find all that you are looking for while visiting our site.
-		</p>
-	</section>
 
 	<script src="about.js"></script>
 
